@@ -67,6 +67,10 @@ AC_DEFUN([RVL_GCONF], [
 	AM_GCONF_SOURCE_2
 ])
 
+AC_DEFUN([RVL_LIBPANELAPPLET], [
+	PKG_CHECK_MODULES(LIBPANELAPPLET, libpanelapplet-2.0 >= 2.9.4, [ AC_DEFINE(HAVE_REQUEST_FOCUS) ], [ true ])
+])
+
 AC_DEFUN([RVL_PYGTK], [
 	PKG_CHECK_MODULES(PYGTK, pygtk-2.0 >= 2.3.90)
 	PKG_CHECK_MODULES(GNOME_PYTHON, gnome-python-2.0 >= 2.5.90)
