@@ -19,6 +19,7 @@ RVL_PYTHON_MODULE(Crypto, yes)
 RVL_PYGTK()
 RVL_CRACKLIB()
 RVL_GCONF()
+RVL_LIBPANELAPPLET()
 RVL_FDO_MIME()
 
 
