@@ -5,12 +5,14 @@
   (return-type "none")
 )
 
-(define-function panel_applet_request_focus
-  (c-name "panel_applet_request_focus")
-  (return-type "none")
-  (parameters
-    ("PanelApplet*" "applet")
-    ("guint32" "timestamp")
+(ifdef 'HAVE_REQUEST_FOCUS
+  (define-function panel_applet_request_focus
+    (c-name "panel_applet_request_focus")
+    (return-type "none")
+    (parameters
+      ("PanelApplet*" "applet")
+      ("guint32" "timestamp")
+    )
   )
 )
 
